# newproject

./: .gitignore  CMakeLists.txt  build.sh  readme.md
app/: CMakeLists.txt  another.h  main.cpp
executable/: another.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: internal.cpp  internal.h  lib.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
